--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <div class="caja shrek">
                 <h5><a href="https://youtu.be/I3Zq9a040AA?si=iT9BTriYMf9iVRu2" target="_blank">VER TRAILER</a></h5>
-                <img src="https://static.wikia.nocookie.net/doblaje/images/6/69/Shrekban.png/revision/latest?cb=20200731225428&path-prefix=es">
+                <img src="https://static.wikia.nocookie.net/shrek/images/8/85/Shrek_2001_poster.jpg/revision/latest/scale-to-width-down/1200?cb=20201020072731">
         </div>
             <div class="baul">
                     <p><b>Dirección:</b> Andrew Adamson y Vicky Jenson <br>
